--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>بطاقتي التعريفية</title>
     <!--  قم بربط هذه الصفحة  مع css -->
+    <link rel="stylesheet" href="styles.css">
 
     <!--  ربط google fonts -->
+    <link href='https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap' rel='stylesheet'>
     
   </head>
 
@@ -21,13 +23,13 @@
       <img src="./img/kid.png" alt="person" />
 
       <!-------------------(البيانات)------------------>
-      <h1>اسمك</h1>
+      <h1>علي احمد مطر الفضلي</h1>
       <h4>هواياتي المفضلة</h4>
 
       <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
+        <li>النوم</li>
+        <li>السباحه</li>
+        <li>الاكل</li>
       </ul>
 
       <a href="https://code.kw/">
